1998-11-12  Andrew T. Veliath  <andrewv@usa.net>

	* gnome.m4: (GNOME_INIT_HOOK): Add GNOME_GNORBA_CHECK if
	gnome-config is found.  New GNOMEGNORBA_LIBS library variable
	(GNOMEGNORBA_LIBS is a superset of GNOMEUI_LIBS).  Update
	GNOME_LIBDIR and GNOME_INCLUDEDIR to to include the required
	Gnorba info, if it is in a different location.

	* Makefile.am (MACROS): Add gnome-gnorba-check.m4 to Makefile.
	
	* gnome-gnorba-check.m4: New file.

1998-11-12  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4 (vsnprintf): Remove easy-vsnprintf hack -- it
	doesn't work for Solaris 2.5 binaries running on Solaris 2.6.
	From Frederic Devernay <devernay@istar.fr>.

1998-11-06  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Fix stupid type (sterror_r -> strerror_r).

1998-11-04  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4 (need_gnome_support): Set this unconditionally
	to `yes'.  We'll soon be losing this variable.

1998-10-20  Andrew Veliath  <andrewtv@usa.net>

	* gnome-orbit-check.m4 (GNOME_ORBIT_HOOK): Add ORBIT_IDL
	detection; fix failure flag.

1998-10-12  Martin Baulig  <martin@home-of-linux.org>

	* compiler-flags.m4 (warnCFLAGS): Added `-Wno-unused'.

1998-10-11  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (libgtop_postinstall): Use `:' instead
	of the empty string if there is nothing to do since the empty string
	is no valid shell sytax.

1998-10-11  Marius Vollmer  <mvo@zagadka.ping.de>

	* gnome-guile-checks.m4: Check for "guile-config" and then for
	"build-guile", if guile-config couldn't be found.  Do not
	explicitely include output from "info libdir", it is already
	included in "link".  Use "compile" instead of "info includedir".  Do
	not include "1.2" in error message when Guile can't be found at
	all.
	
1998-10-11  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4 (GNOME_INIT_LIBGTOP): Added optional
	third parameter which is the `script-if-enabled' parameter of